# libformuloid

./: .gitignore  README.md  introduction.md  meson.build
demos/: Color.h  NOTES.txt  RESOURCES.txt  Shape.h  Source.h  demo-anim.cc  demo-graph.cc  demo-syntax-oper.h  demo-syntax.cc  geometry.h  matrix.h  meson.build  support-cairo-sdl.h  tunis.h
doc/: Doxyfile.in  concepts.dox  functions.dox  main.dox  meson.build  operators.dox
fmd/: basal.cc  fmd.cpp  fmd.h  pretty.cc
fmd/bits/: angle.h  apply.h  args.h  bezier.h  cast.h  compute.h  context.h  cyclic.h  easing.h  element.h  exceptions.h  formuloid.h  func.h  identity.h  instantiation.h  join.h  lambda.h  lerp.h  let.h  math.h  morph.h  node.h  operators.h  pretty.h  scheme.h  select.h  support.h  traits.h  transit.h  typename.h  waves.h
tests/: color_enum.h  meson.build  t1.cc  t_arith.cc  t_constant.cc  t_identity.cc  t_join_m.cc  t_let.cc  t_scheme1.cc  t_select.cc  t_transit_m.cc  tap.cc  tap.h  tap_main_ptest.h  util.h
